--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+#container ul {
+  margin: 0;
+  padding: 0;
+}
+#container ul li {
+  list-style-type: none;
+  width: 400px;
+  margin: 5px 0;
+  padding: 5px;
+}
 #sortable {
   list-style-type: none;
   margin: 0;
