--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,13 @@
   font-family: arial;
   font-size:14px;
 }
+#container ul li {
+  list-style-type: none;
+  width: 400px;
+  margin: 5px 0;
+  padding: 5px;
+}
+#container ul {
+  margin: 0;
+  padding: 0;
+}
